swap deranged source

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ crossbeam-channel = "0.5"
 devtimer = "4.0"
 
 [dependencies.deranged]
-#git = "https://github.com/shelvacu/deranged"
-#branch = "array-indexes"
-path = "../deranged"
+git = "https://github.com/shelvacu/deranged"
+branch = "array-indexes"
+#path = "../deranged"
 default-features = false
 features = ["std"]
 
