--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = "2.33.3"
 crossbeam-channel = "0.5"
 devtimer = "4.0"
 progressing = "3.0.2"
+phf = { version = "0.11.1", optional = true }
 
 [dependencies.deranged]
 git = "https://github.com/shelvacu/deranged"
@@ -20,6 +21,14 @@ branch = "array-indexes"
 #path = "../deranged"
 default-features = false
 features = ["std"]
+
+[build-dependencies]
+phf = { version = "0.11.1", default-features = false, optional = true }
+phf_codegen = { version = "0.11.1", optional = true }
+
+# Only needed for phf but can't gate on that
+[profile.dev.build-override]
+opt-level = 3
 
 # These options trade some compile time for hopefully faster code.
 # Particularly lto = true and codegen-units = 1
@@ -38,6 +47,7 @@ more-unchecked = []
 fnvmap = []
 btreemap = []
 serial = []
+perfect = ["phf", "phf_codegen"]
 
 row-by-row = []
 weave = []
@@ -81,5 +91,6 @@ height-15 = []
 
 default-tests = []
 
-default-unsized = ["charset-english-small", "row-by-row", "fnvmap"]
+#default-unsized = ["charset-english-small", "row-by-row", "fnvmap"]
+default-unsized = ["charset-english-small", "row-by-row", "perfect"]
 default = ["width-5", "height-5", "square", "default-unsized"]
